# naive-rag-project

./: README.md  pyproject.toml  ruff.toml
naive_rag/: config.py  ejemplo_superviernes.ipynb
