[tool.poetry]
name = "naive-rag"
version = "0.1.0"
description = ""
authors = ["SebaHagedorn <sebastian.hagedorn@unholster.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.13"
chroma = "^0.2.0"
ipykernel = "^6.29.5"
langchain-text-splitters = "^0.3.4"
python-decouple = "^3.8"
langchain-chroma = "^0.1.4"
tiktoken = "^0.8.0"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
pymupdf = "^1.25.1"

[tool.poetry.group.dev.dependencies]
# Development-specific dependencies.
ruff = "~0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
